--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,5 +1,8 @@
-body {
+* {
   margin: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +13,354 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  display: grid;
+  grid-template-columns: .5fr 2fr;
+  grid-template-areas: "header nav nav nav"
+                      "main main main main"
+                      "footer footer footer footer";
+
+}
+
+nav ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(6, auto);
+  text-align: center;
+  padding: 0;
+}
+
+footer ul {
+  list-style-type: none;
+  list-style-position: inside;
+  padding: 0;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-column: 1/12;
+  grid-area: main;
+}
+
+footer {
+  display: grid;
+  grid-template-columns: repeat(4,auto);
+  grid-area: footer;
+  background-color: #BABABA;
+  padding: 2% 10%;
+  color: #333333;
+}
+
+footer img {
+  object-fit: cover;
+  object-position: left top;
+  width: 7em;
+  height: 10em;
+  margin: auto;
+}
+
+footer h2 {
+  font-family: 'Karla';
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+footer h3, a {
+  font-family: 'Karla';
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 130%;
+}
+
+header {
+  grid-area: header;
+  padding-left: 35%;
+  margin: 5% 0%;
+}
+
+nav {
+  grid-area: nav;
+  margin: auto 0%;
+}
+
+nav a:visited, footer a:visted {
+  color: black;
+  text-decoration: none;
+}
+
+nav a, footer a {
+  text-decoration: none;
+  color: black;
+}
+
+main img {
+  height: 200px;
+}
+
+nav {
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 23px;
+  color: black;
+}
+
+.hero-section {
+  background-color: #495E57;
+  grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  padding: 0% 10%;
+  height: 20em;
+}
+
+.hero-section h1 {
+  color: #F4CE14;
+  font-family: 'Markazi Text';
+  font-weight: 500;
+  font-size: 64px;
+  line-height: 77px;
+  margin: 5% 0% 0% 0%;
+}
+
+.hero-section h2 {
+  color: #EDEFEE;
+  font-family: 'Markazi Text';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  grid-column-start: 1;
+  margin-bottom: 2%;
+}
+
+.hero-section p {
+  color: #EDEFEE;
+  font-family: 'Karla';
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  grid-column-start: 1;
+  width: 13em;
+}
+
+.hero-section button {
+  background: #F4CE14;
+  border-radius: 16px;
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 23px;
+  color: #333333;
+  text-align: center;
+  width: 30%;
+  border: none;
+  margin: 2% 0%;
+  padding: 1% 0%;
+}
+
+.hero-section img {
+  width: 51%;
+  height: 104%;
+  border-radius: 16px;
+  object-fit: cover;
+  grid-row: 1/6;
+  grid-column: 2/2;
+  display: block;
+  margin: auto auto -10% auto;
+}
+
+.highlights button {
+  background: #F4CE14;
+  border-radius: 16px;
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 23px;
+  color: #333333;
+  text-align: center;
+  width: 200px;
+  height: 60px;
+  margin: 8% 0% 8% 30%;
+  border: none;
+}
+
+.highlights {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  padding: 5% 10%;
+}
+
+.highlights h1 {
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 47px;
+  grid-column: 1/3;
+  margin: 5% 0% 5% 9%;
+}
+
+.special {
+  background: #EDEFEE;
+  margin: 0% 18% 0% 18%;
+  border-radius: 16px 16px 0px 0px;
+  display: grid;
+  grid-template-columns: 1fr .4fr;
+}
+
+.special h4 {
+  font-family: 'Markazi Text';
+  font-style: normal;
+  font-size: 20px;
+  line-height: 90%;
+  padding: 10% 10%;
+}
+.special p {
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #495E57;
+  padding: 0% 8%;
+  grid-column: 1/3;
+}
+
+.special h5 {
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #EE9972;
+  padding: 23% 10%;
+}
+
+.special a {
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #333333;
+  text-decoration: none;
+  padding: 10% 10%;
+}
+
+.special img {
+  border-radius: 16px 16px 0px 0px;
+  width: 100%;
+  object-fit: cover;
+  grid-column: 1/3;
+}
+
+.testimonials {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  background: #BABABA;
+  padding: 5% 10%;
+}
+
+.testimonials h1 {
+  grid-column: 1/5;
+  text-align: center;
+  font-family: 'Markazi Text';
+  font-size: 36px;
+  color: #333333;
+}
+
+.review {
+  background: #EDEFEE;
+  text-align: center;
+  margin: 10% auto;
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  padding: 10%;
+  box-sizing: border-box;
+  width: 17em;
+  height: 15em;
+}
+
+.review h4, .review h5, .review p {
+    grid-column: 1/3;
+    font-family: 'Karla';
+    font-size: 18px;
+    margin: 5%;
+}
+
+.review img {
+  height: auto;
+  width: 100%;
+  grid-column: 1/1;
+  margin: 5%;
+}
+
+.review h5 {
+  grid-column: 2/2;
+  margin: auto;
+}
+
+.review h4 {
+  text-align: left;
+}
+
+.review p {
+  text-align: left;
+}
+
+.About {
+  padding: 5% 10%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.About h1 {
+  font-family: 'Markazi Text';
+  font-weight: 500;
+  font-size: 64px;
+  line-height: 77px;
+}
+
+.About h2 {
+  font-family: 'Markazi Text';
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 48px;
+  grid-column: 1;
+}
+
+.About p {
+  font-family: 'Karla';
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: justify;
+  width: 60%;
+  grid-column: 1;
+}
+
+.About img {
+  grid-column: 2;
+}
+
+.About img:first-of-type {
+  margin: -10%;
+  height: 20em;
+  object-fit: cover;
+  width: 40%;
+  object-position: 0%;
+}
+
+.About img:last-of-type {
+  margin: -60% 0% 0% 15%;
+  height: 20em;
+  object-fit: cover;
+  width: 40%;
+  object-position: 90%;
 }
