--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -2,6 +2,10 @@
   margin: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -17,7 +21,6 @@ code {
 
 #root {
   display: grid;
-  grid-template-columns: .5fr 2fr;
   grid-template-areas: "header nav nav nav"
                       "main main main main"
                       "footer footer footer footer";
