--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -7,16 +7,12 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header, nav, main, footer {
+  max-width: 100%;
 }
 
 #root {
@@ -95,6 +91,24 @@ nav a:visited, footer a:visted {
   text-decoration: none;
 }
 
+nav a::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: black;
+  transform-origin: bottom right;
+  transition: transform 0.25s;
+}
+
+nav a:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
 nav a, footer a {
   text-decoration: none;
   color: black;
@@ -118,6 +132,8 @@ nav a {
   font-size: 20px;
   line-height: 23px;
   color: black;
+  display: inline-block;
+  position: relative;
 }
 
 .hero-section {
@@ -206,14 +222,6 @@ nav a {
   padding: 5% 10%;
 }
 
-@media screen and (max-width: 900px) {
-  .highlights {
-    grid-auto-flow: row;
-    background-color: green;
-    grid-template-columns: 1fr;
-  }
-}
-
 .highlights h1 {
   font-family: 'Karla';
   font-style: normal;
@@ -226,10 +234,10 @@ nav a {
 
 .special {
   background: #EDEFEE;
-  margin: 0% 18% 0% 18%;
+  margin: 0% 10%;
   border-radius: 16px 16px 0px 0px;
   display: grid;
-  grid-template-columns: 1fr .4fr;
+  grid-template-columns: 1.1fr 1fr;
 }
 
 .special h4 {
@@ -257,7 +265,7 @@ nav a {
   font-size: 16px;
   line-height: 19px;
   color: #EE9972;
-  padding: 23% 10%;
+  margin: 10% 0% 10% 60%;
 }
 
 .special a {
@@ -296,12 +304,13 @@ nav a {
 .review {
   background: #EDEFEE;
   text-align: center;
-  margin: 10% auto;
+  margin: 10% 2%;
   display: grid;
   grid-template-columns: 1fr 1.5fr;
   padding: 10%;
   box-sizing: border-box;
-  width: 17em;
+  max-width: 17em;
+  min-width: 8em;
   height: 15em;
 }
 
@@ -385,6 +394,296 @@ nav a {
 
 form {
   display: grid;
-  max-width: 200px;
   gap: 20px;
+  margin: 2% auto;
+  grid-template-columns: repeat(2,1fr);
+  grid-column: 1/5;
+  font-family: 'Karla';
+  font-size: 20px;
+  font-weight: 700;
+  width: 50%;
+  background-color: #5A6F68;
+  color: white;
+  padding: 3% 5%;
+  border-radius: 16px;
+}
+
+form h1 {
+  grid-column: 1/3;
+  font-family: 'Markazi Text';
+  color: #F4CE14;
+  margin-bottom: 5%;
+  text-align: center;
+}
+
+#confirmation {
+  margin: auto;
+  grid-column: 1/5;
+  line-height: 5em;
+  text-align: center;
+  font-size: 20px;
+  padding: 7% 0%;
+}
+
+form button, #confirmation button {
+  background: #F4CE14;
+  border-radius: 16px;
+  font-family: 'Karla';
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 23px;
+  color: #333333;
+  text-align: center;
+  border: none;
+  margin: auto;
+  grid-column: 1/3;
+  padding: 3%;
+  margin-top: 5%;
+}
+
+form button:disabled, #confirmation button:disabled {
+  background: #dddddd;
+  color: #626060;
+  box-shadow: none;
+}
+
+button:hover {
+  box-shadow: 3px 3px rgba(.5,.5,.5,.6);
+}
+
+form span {
+  grid-column: 2/3;
+  color: red;
+  font-size: 16px;
+  line-height: 1;
+}
+
+.icon {
+  margin: 12% 0;
+}
+
+.social-media {
+  display: grid;
+  grid-template-columns: .1fr 1fr;
+  grid-template-rows: repeat(4,.1fr);
+}
+
+.social-media h2 {
+  grid-column: 1/3;
+}
+
+.social-icon {
+  margin: 7% auto;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  appearance: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  background: #F4CE14;
+  height: 5px;
+}
+
+input[type="range"]::-moz-range-track {
+  background: #F4CE14;
+  height: 5px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+   -webkit-appearance: none;
+   margin-top: -5px;
+   background-color: white;
+}
+
+input[type="range"]::-moz-range-thumb {
+    border: none;
+    border-radius: 16px;
+    background-color: white;
+    height: 2rem;
+}
+
+label {
+  font-size: 30px;
+  margin: auto 0;
+}
+
+input {
+  border-radius: 5px;
+  border: none;
+}
+
+input[type="date"], input[type="text"] {
+  font-size: 20px;
+  font-family: "Karla";
+}
+
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 100%;
+  padding: 16px 20px;
+  background: #EDEFEE;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  color: #495E57;
+  font-family: 'Inter';
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  text-align: -webkit-center;
+  text-indent: 30% hanging;
+  border: none;
+}
+
+_::-webkit-full-page-media, _:future, :root select {
+  text-indent: 30%;
+}
+
+#res-time:disabled {
+  color: #D2D2D2;
+}
+
+#occassion {
+  grid-column: 1/2;
+}
+
+#arrow-down-icon {
+  margin-left: -20%;
+  color: #495E57;
+  margin-top: 6%;
+  display: block;
+}
+
+#arrow-up-icon {
+  margin-left: -20%;
+  color: white;
+  margin-top: 6%;
+  display: none;
+}
+
+#champagne-icon {
+  margin-left: 9%;
+  z-index: 1;
+  color: #495E57;
+  grid-row: 11;
+  margin-top: -18%;
+}
+
+@media (max-width: 650px) {
+  #root{
+    grid-template-areas: "header"
+                          "nav   "
+                          "main  "
+                          "footer";
+  }
+  header {
+    padding: 0;
+    margin: 0 auto;
+  }
+  nav {
+    grid-template-columns: 1fr;
+  }
+  .highlights {
+    grid-template-columns: 1fr;
+    padding: 5%;
+  }
+  .special {
+    margin: 3% 0;
+    grid-column: 1/3;
+  }
+  .highlights button {
+    justify-self: center;
+    margin: 1% auto;
+    width: 100%;
+  }
+  .highlights h1 {
+  }
+  .testimonials {
+    padding: 5% 0%;
+    grid-template-columns: 1fr;
+  }
+  .testimonials h1 {
+    grid-column: 1;
+  }
+  .review {
+    padding: 0;
+    max-width: 90%;
+    height: auto;
+    margin: 3% auto;
+  }
+  footer {
+    grid-template-columns: 1fr;
+  }
+
+  .hero-section {
+    grid-template-columns: 1fr;
+    height: auto;
+    padding: 5% 10%;
+  }
+
+  .hero-section button {
+    width: 100%;
+    height: 100%;
+  }
+
+  .hero-section img {
+    margin: auto;
+    width: 100%;
+    height: 50%;
+    grid-row: 1/1;
+    display: none;
+  }
+
+  .hero-section h1, .hero-section h2, .hero-sectionn p, .hero-section img, .hero-section button {
+    grid-column-start: 1;
+    grid-column-end: 1;
+  }
+
+  .door-nav, .contact, .social-media {
+    margin: 3% 0;
+  }
+
+  .About {
+    grid-template-columns: 1fr;
+    padding: 5%;
+  }
+
+  .About p {
+    width: 100%;
+  }
+
+  .About img {
+    grid-column: 1/1;
+  }
+
+  .About img:first-of-type, .About img:last-of-type {
+    margin: 2% auto;
+    width: 100%;
+  }
+
+  form {
+    grid-column: 1/1;
+    width: auto;
+  }
+
+  #confirmation {
+    grid-column: 1/1;
+    line-height: 1;
+  }
+
+  #champagne-icon {
+    margin-top: -25%;
+  }
+
+  #arrow-down-icon, #arrow-up-icon {
+    margin-left: -28%;
+    margin-top: 8%;
+  }
+
 }
